<resources>
    <string name="app_name">Durooma</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="accounts">Accounts</string>
    <string name="transactions">Transactions</string>
    <string name="account_name">Account Name</string>
    <string name="initial_balance">Initial Balance</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="edit_accounts">Edit Accounts</string>
    <string name="delete_items">Delete items</string>
    <string name="refresh">Refresh</string>

    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="transfer">Transfer</string>

    <string name="amount">Amount</string>
    <string name="source_account">Source Account</string>
    <string name="target_account">Target Account</string>
    <string name="exempt">Exempt from Huqúqu\'lláh</string>
    <string name="edit_transactions">Edit Transactions</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
</resources>
