<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.durooma.android.EditAccountActivity_">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/amount"
            android:hint="@string/amount"
            app:met_floatingLabel="highlight"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.durooma.android.util.MaterialSpinner
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/source_account"
            app:met_floatingLabel="highlight"
            />

        <com.durooma.android.util.MaterialSpinner
            android:id="@+id/target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/target_account"
            app:met_floatingLabel="highlight"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/is_exempt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/exempt_amount"
                android:hint="@string/exempt"
                app:met_floatingLabel="highlight"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress"
        android:background="#aaffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

</FrameLayout>
